--- a/public/css/style.css
+++ b/public/css/style.css
@@ -78,24 +78,33 @@ nav {
   background:url(https://i.postimg.cc/k4bQN2Zd/bgdesign.png) ; 
   background-size: cover;
   background-attachment: fixed; 
+  text-align: center;
+  padding-top: 30px;
   border-radius: 20px;
-  padding-left: 5%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 10rem;
   height: 480px;
-  max-width: 11000px;
-  margin-top: 4rem ;
+  margin-top: 3rem ;
   margin-left: 3rem;
   margin-right: 5rem;
-  margin-bottom: 2rem;
+  margin-bottom: 3rem;
 }
 
-.imagepc {
+.imgrtg {
+    margin-bottom: 50px;
+    align-items: center;
+}
+
+.clap {
+    display: flex;
     position: absolute;
-    margin-left: 50%;
-    margin-bottom: 7rem;
+    margin-left: -2%;
+    margin-top: -50px;
+}
+
+.jempol {
+    display: flex;
+    position: absolute;
+    margin-left: 82%;
+    margin-top: -55px;
 }
 
 .intro-text h1 {
@@ -127,11 +136,12 @@ nav {
     display: inline-block;
     padding: 0.8rem 0.6rem;
     border: none;
-    font-size: 1.4rem;
+    font-size: 1rem;
     border-radius: 5px;
     color: rgb(0, 0, 0);
     font-family: "Roboto", sans-serf;
     border: 1px solid black;
+    width: 180px;
 }
   
 .red {
@@ -186,6 +196,18 @@ nav {
 
 body.dark {
     background-color: #161616;
+}
+
+body.dark .a {
+    font-size: 1rem;  
+    text-decoration: none;
+    color:rgb(0, 0, 0);
+    margin-left: -97%;
+    margin-top: 0%;
+}
+
+body.dark .a:hover {
+        color: rgb(255, 255, 255);
 }
   
 body.dark .bar {
