--- a/public/css/index.css
+++ b/public/css/index.css
@@ -22,6 +22,26 @@ html {
         background: url(https://i.postimg.cc/k4bQN2Zd/bgdesign.png);
         background-size: cover;
         margin-bottom: 10px;
+        align-items: center;
+        justify-content: center;
+    }
+
+    select {
+        width: 100%;
+        height: 30px;
+        margin: 2px;
+        -moz-box-sizing: border-box;
+        -webkit-box-sizing: border-box;
+        box-sizing: border-box;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        outline: 0;
+        background-color:rgba(255, 255, 255, 0.9); 
+        color: #747474;
+        border: 1px solid crimson;
+        padding: 4px;
+        border-radius: 9px;
     }
 
     .form {
@@ -35,6 +55,7 @@ html {
         background-size: cover;
         background-attachment: fixed; 
         border-radius: 20px;
+        border: 1px solid rgb(0, 0, 0);
     }
 
     .form-content  h1 {
@@ -140,11 +161,11 @@ html {
         background: transparent;
         width: 100%;
         border: none;
-        height: 40px;
+        height: 20px;
         border-bottom: 1px solid #bfbfbf;
         color: rgb(0, 0, 0);
         margin-bottom: 10px;
-        margin-top: -9px;
+        margin-top: -15px;
         outline: none;
     }
 
@@ -289,6 +310,29 @@ html {
     background: #256d85;
 }
 
+/* Style the header: fixed position (always stay at the top) */
+.header {
+    position: fixed;
+    top: 0;
+    z-index: 1;
+    width: 100%;
+    background-color: #f1f1f1;
+  }
+  
+  /* The progress container (grey background) */
+  .progress-container {
+    width: 100%;
+    height: 8px;
+    background: #ccc;
+  }
+  
+  /* The progress bar (scroll indicator) */
+  .progress-bar {
+    height: 8px;
+    background: #ea7622;
+    width: 0%;
+  }
+
 .theme-switch {
     display: flex;
     margin-top: 1%;
@@ -344,6 +388,13 @@ body.dark {
 
 .dark .form {
     background-color: #000000;
+    border: 1px solid red;
+}
+
+.dark select {
+    background: #000000;
+    color: #bfbfbf;
+    border: 1px solid crimson;
 }
 
 body.dark .kelamin {
