--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -36,7 +36,7 @@ a {
     font-size: 1rem;  
     text-decoration: none;
     color:white;
-    margin-left: -55%;
+    margin-left: -54%;
     margin-top: 0%;
 }
   
@@ -65,15 +65,16 @@ nav {
     height: 50px;
     border-radius: 50%;
     border: solid 1px black;
-    margin-right: 16%;
+    margin-right: 22%;
 }
 
 .nama {
+    align-items: right;
     position: absolute;
     text-align: right;
     font-size: larger;
     font-style: bold;
-    margin-left: -22%;
+    margin-left: -27%;
     color: white;
     margin-top: -1%;
     width: 250px;
@@ -81,6 +82,15 @@ nav {
 
 .nama:hover{
     color: #000000;
+}
+
+.line {
+    width: 2px;
+    height: 60px;
+    position: absolute;
+    background: #000;
+    margin-left: 93.2%;
+    
 }
 
 .checkbox {
@@ -102,7 +112,7 @@ nav {
     border-radius: 30px;
     padding: 6px;
     position: relative;
-    margin-left: 450%;
+    margin-left: 1160%;
 }
 
 .switcher {
@@ -122,7 +132,6 @@ nav {
 .sun {
     color: #ffffff;
 }
-
 .hero {
   background:url(https://i.postimg.cc/k4bQN2Zd/bgdesign.png) ; 
   background-size: cover;
